[lworld] TestCallingConvention::test36 spuriously fails

XMLWordPrintable

       stderr: [Exception in thread "main" java.lang.reflect.InvocationTargetException
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:678)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:419)
      at compiler.valhalla.valuetypes.TestCallingConvention.main(TestCallingConvention.java:79)
      Caused by: java.lang.RuntimeException: assertEquals: expected \u2c9f to equal \u4c80
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:166)
      at compiler.valhalla.valuetypes.MyValue3.verify(MyValue3.java:215)
      at compiler.valhalla.valuetypes.TestCallingConvention.test36_verifier(TestCallingConvention.java:765)
      ... 7 more

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: