8242210: [lworld] TestCallingConvention::test36 spuriously fails